# origin-style-chart-skills

./: LICENSE  README.md
origin_style_chart/: QUICK_REFERENCE.md  README_ORIGIN_STYLE.md  SKILL.md  pyproject.toml
origin_style_chart/examples/: quick_plot_template.py  simple_plot.py
origin_style_chart/src/origin_style_chart/: __init__.py  core.py
origin_style_chart/src/origin_style_chart.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
