[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-style-chart"
version = "1.0.0"
description = "Origin-style matplotlib charts for scientific data visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.20",
]
keywords = ["matplotlib", "origin", "scientific-plotting", "data-visualization"]

[tool.setuptools.packages.find]
where = ["src"]
